--- a/hello.html
+++ b/hello.html
@@ -3,6 +3,6 @@
         Hi everybody!
     </title>
     <body>
-        This is Pushpitha!This change is made on Github!
+        This is Pushpitha!This change is made on github!
     </body>
 </html>
